syntax = "proto3";

package io.github.sibmaks.spring.jfr.dto.protobuf.calls;

option java_multiple_files = true;
option java_package = "io.github.sibmaks.spring.jfr.dto.protobuf.calls";

message CallTrace {
  int32 invocation_id = 1;
  bool success = 2;
  int32 type = 3;
  int64 start_time = 4;
  int64 end_time = 5;
  int32 thread_name = 6;
  int32 class_name = 7;
  int32 method_name = 8;
  map<int32, int32> details = 9;
  repeated CallTrace children = 10;
}

message CallTraceList {
  repeated CallTrace call_traces = 1;
}

message CallsReport {
  map<int32, CallTraceList> contexts = 1;
}